# echo-tts-mlx

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
benchmarks/: compare.py  cross_impl_protocol.py  run_benchmarks.py
docs/: ARCHITECTURE.md  AUDIO_QUALITY.md  BENCHMARKS.md  BLOCKWISE_BENCHMARKS_SPEC.md  BLOCKWISE_SPEC.md  GUIDE.md  PERFORMANCE_SPEC.md  QUANTIZATION.md  QUANTIZATION_SPEC.md  SPEC.md
scripts/: convert_weights.py  layer_sensitivity_sweep.py  quantize_quality_validation.py  run_all_benchmarks.sh  tail_pitch_analysis.py
src/echo_tts_mlx/: __init__.py  _conversion_utils.py  _dac_core.py  autoencoder.py  cli.py  config.py  conversion.py  model.py  pca.py  pipeline.py  sampler.py  tokenizer.py  utils.py
tests/: test_autoencoder.py  test_autoencoder_integration.py  test_benchmarks_compare.py  test_benchmarks_runner.py  test_blockwise.py  test_cli.py  test_conversion.py  test_conversion_utils.py  test_coverage_boost.py  test_cross_impl_protocol.py  test_pca.py  test_pca_coverage.py  test_pipeline_audio_coverage.py  test_pipeline_coverage.py  test_pipeline_integration.py  test_pipeline_quantized_save.py  test_quantize_config.py  test_quantize_mxfp4.py  test_sampler.py  test_tail_pitch.py  test_tokenizer.py  test_utils.py
