[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "echo-tts-mlx"
version = "1.0.0"
description = "Echo-TTS inference on Apple Silicon via MLX"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Matthew Znoj"},
]
keywords = ["tts", "mlx", "apple-silicon", "speech-synthesis", "diffusion"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.31.0",
    "numpy",
    "soundfile",
    "soxr",
    "huggingface_hub",
    "safetensors",
    "tqdm",
]

[project.optional-dependencies]
convert = [
    "torch>=2.0",
]
dev = [
    "build",
    "torch>=2.0",
    "pytest",
    "pytest-cov",
    "librosa",
    "matplotlib",
]

[project.scripts]
echo-tts-mlx = "echo_tts_mlx.cli:main"

[project.urls]
Repository = "https://github.com/mattznojassist/echo-tts-mlx"
Upstream = "https://github.com/jordandare/echo-tts"
"Upstream Model" = "https://huggingface.co/jordand/echo-tts-base"
"Upstream Demo" = "https://huggingface.co/spaces/jordand/echo-tts-preview"
"Technical Blog" = "https://jordandarefsky.com/blog/2025/echo/"

[tool.setuptools.packages.find]
where = ["src"]
